apps/base/openwebui/openwebui.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui-ingress
  namespace: openwebui-system
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: ai.tinyrack.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  name: http
                  number: 80

  tls:
    - hosts:
        - "ai.tinyrack.net"
      secretName: letsencrypt-wildcard-cert-tinyrack.net
